--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.woniuxy.springcloud</groupId>
+    <groupId>com.woniuxy</groupId>
     <artifactId>cloudboat</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <!--模块路径-->
     <modules>
-
         <module>common</module>
     </modules>
     <properties>
